--- a/package.json
+++ b/package.json
@@ -1,9 +1,25 @@
 {
   "scripts": {
-    "start": "webpack"
+    "dev": "webpack-dev-server --env dev",
+    "dev_v": "webpack-dev-server --env dev",
+    "prod": "webpack --env prod"
   },
   "devDependencies": {
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.30.1",
-    "webpack": "^2.7.0"
+    "node-sass": "^4.5.3",
+    "node-static": "^0.7.10",
+    "normalize.css": "^7.0.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "pug": "^2.0.0-rc.4",
+    "pug-loader": "^2.3.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.1",
+    "webpack": "^2.7.0",
+    "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.0"
   }
 }
